--- a/UnitTests/reaction.unittest.csproj
+++ b/UnitTests/reaction.unittest.csproj
@@ -3,8 +3,8 @@
 	<PropertyGroup>
 		<TargetFramework>net9.0</TargetFramework>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
-		<AssemblyName>reinput</AssemblyName>
-		<PackageId>reinput</PackageId>
+		<AssemblyName>reaction.unittest</AssemblyName>
+		<PackageId>reaction.unittest</PackageId>
 		<LangVersion>13</LangVersion>
 		<NoWarn>1701;1702;1591;</NoWarn>
 		<WarningsAsErrors></WarningsAsErrors>
@@ -12,6 +12,7 @@
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 		<DefineConstants>SANDBOX;ADDON;DEBUG</DefineConstants>
 		<AllowUnsafeBlocks>False</AllowUnsafeBlocks>
+		<IsTestProject>true</IsTestProject>
 
 		<DesignTimeBuild Condition="'$(DesignTimeBuild)' == 'true'">true</DesignTimeBuild>
 	</PropertyGroup>
@@ -28,18 +29,22 @@
 	<ItemGroup>
 		<AdditionalFiles Include="**/*.razor" />
 	</ItemGroup>
-
+<ItemGroup>
+	<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
+	<PackageReference Include="MSTest.TestAdapter" Version="3.1.1" />
+	<PackageReference Include="MSTest.TestFramework" Version="3.1.1" />
+	<PackageReference Include="coverlet.collector" Version="6.0.0" />
+</ItemGroup>
 
 
 	<ItemGroup>
+		<Using Include="Sandbox.Internal.GlobalToolsNamespace" Static="true" />
 		<Using Include="Sandbox.Internal.GlobalGameNamespace" Static="true" />
-		<Using Include="Microsoft.AspNetCore.Components" />
-		<Using Include="Microsoft.AspNetCore.Components.Rendering" />
 	</ItemGroup>
 
   <PropertyGroup>
 	<OutputPath>G:\SteamLibrary\steamapps\common\sbox/.vs/output/</OutputPath>
-	<DocumentationFile>G:\SteamLibrary\steamapps\common\sbox/.vs/output/reinput.xml</DocumentationFile>
+	<DocumentationFile>G:\SteamLibrary\steamapps\common\sbox/.vs/output/reaction.unittest.xml</DocumentationFile>
 	<RootNamespace>Sandbox</RootNamespace>
 	<Nullable>disable</Nullable>
   </PropertyGroup>
@@ -53,10 +58,16 @@
 		<Reference Include="G:\SteamLibrary\steamapps\common\sbox\bin\managed/Sandbox.Game.dll" />
 		<Reference Include="G:\SteamLibrary\steamapps\common\sbox\bin\managed/Sandbox.Reflection.dll" />
 		<Reference Include="G:\SteamLibrary\steamapps\common\sbox\bin\managed/Sandbox.Mounting.dll" />
+		<Reference Include="G:\SteamLibrary\steamapps\common\sbox\bin\managed/Sandbox.Tools.dll" />
+		<Reference Include="G:\SteamLibrary\steamapps\common\sbox\bin\managed/Sandbox.Compiling.dll" />
+		<Reference Include="G:\SteamLibrary\steamapps\common\sbox\bin\managed/Microsoft.CodeAnalysis.dll" />
+		<Reference Include="G:\SteamLibrary\steamapps\common\sbox\bin\managed/Sandbox.Bind.dll" />
 	</ItemGroup>
 
   <ItemGroup>
-		<ProjectReference Include="G:\SteamLibrary\steamapps\common\sbox\addons\base\Code\Base Library.csproj" />
+		<ProjectReference Include="G:\SteamLibrary\steamapps\common\sbox\addons\tools\Code\Base Editor Library.csproj" />
+		<ProjectReference Include="J:\Documents\s&amp;box projects\enlocked\Libraries\ReAction\Code\reaction.csproj" />
+		<ProjectReference Include="J:\Documents\s&amp;box projects\enlocked\Libraries\ReAction\Editor\reaction.editor.csproj" />
 
   </ItemGroup>
 
