--- a/Code/reaction.csproj
+++ b/Code/reaction.csproj
@@ -38,25 +38,25 @@
 	</ItemGroup>
 
   <PropertyGroup>
-	<OutputPath>G:\SteamLibrary\steamapps\common\sbox/.vs/output/</OutputPath>
-	<DocumentationFile>G:\SteamLibrary\steamapps\common\sbox/.vs/output/reaction.xml</DocumentationFile>
+	<OutputPath>F:\Steam\steamapps\common\sbox/.vs/output/</OutputPath>
+	<DocumentationFile>F:\Steam\steamapps\common\sbox/.vs/output/reaction.xml</DocumentationFile>
 	<RootNamespace>Sandbox</RootNamespace>
 	<Nullable>disable</Nullable>
   </PropertyGroup>
 
 	<ItemGroup>
-		<Analyzer Include="G:\SteamLibrary\steamapps\common\sbox\bin\managed\Sandbox.CodeUpgrader.dll"/>
-		<Analyzer Include="G:\SteamLibrary\steamapps\common\sbox\bin\managed\Sandbox.Generator.dll" Condition="$(DesignTimeBuild) != 'true'"/>
-		<Reference Include="G:\SteamLibrary\steamapps\common\sbox\bin\managed/Sandbox.System.dll" />
-		<Reference Include="G:\SteamLibrary\steamapps\common\sbox\bin\managed/Sandbox.Engine.dll" />
-		<Reference Include="G:\SteamLibrary\steamapps\common\sbox\bin\managed/Sandbox.Filesystem.dll" />
-		<Reference Include="G:\SteamLibrary\steamapps\common\sbox\bin\managed/Sandbox.Game.dll" />
-		<Reference Include="G:\SteamLibrary\steamapps\common\sbox\bin\managed/Sandbox.Reflection.dll" />
-		<Reference Include="G:\SteamLibrary\steamapps\common\sbox\bin\managed/Sandbox.Mounting.dll" />
+		<Analyzer Include="F:\Steam\steamapps\common\sbox\bin\managed\Sandbox.CodeUpgrader.dll"/>
+		<Analyzer Include="F:\Steam\steamapps\common\sbox\bin\managed\Sandbox.Generator.dll" Condition="$(DesignTimeBuild) != 'true'"/>
+		<Reference Include="F:\Steam\steamapps\common\sbox\bin\managed/Sandbox.System.dll" />
+		<Reference Include="F:\Steam\steamapps\common\sbox\bin\managed/Sandbox.Engine.dll" />
+		<Reference Include="F:\Steam\steamapps\common\sbox\bin\managed/Sandbox.Filesystem.dll" />
+		<Reference Include="F:\Steam\steamapps\common\sbox\bin\managed/Sandbox.Game.dll" />
+		<Reference Include="F:\Steam\steamapps\common\sbox\bin\managed/Sandbox.Reflection.dll" />
+		<Reference Include="F:\Steam\steamapps\common\sbox\bin\managed/Sandbox.Mounting.dll" />
 	</ItemGroup>
 
   <ItemGroup>
-		<ProjectReference Include="G:\SteamLibrary\steamapps\common\sbox\addons\base\Code\Base Library.csproj" />
+		<ProjectReference Include="F:\Steam\steamapps\common\sbox\addons\base\Code\Base Library.csproj" />
 
   </ItemGroup>
 
